chore: homepage css complete

--- a/index.html
+++ b/index.html
@@ -4,14 +4,21 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Clube de Regatas do Flamengo</title>
+    <link rel="stylesheet" href="css/index.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <header>
-      <div class="logo-and-title">
+      <div class="logo-and-title-container">
         <img
           src="https://upload.wikimedia.org/wikipedia/commons/9/93/Flamengo-RJ_%28BRA%29.png"
           alt="Flamengo logo"
-          width="45px"
+          width="40px"
         />
         <h1>Clube de Regatas do Flamengo</h1>
       </div>
@@ -31,49 +38,57 @@
     </header>
     <main>
       <h2>About the team</h2>
-      <img
-        src="https://imagens.ebc.com.br/noNSdFbsddnY3R5zD9kF-rYoE_E=/1170x700/smart/https://agenciabrasil.ebc.com.br/sites/default/files/thumbnails/image/flamengo_3_a_0_coritiba_brasileiro_2023.jpg?itok=iH75NfuN"
-        alt="Flamengo players"
-        width="500px"
-      />
-      <p>
-        <strong>Clube de Regatas do Flamengo</strong>, more commonly referred to
-        as simply Flamengo, is a Brazilian sports club based in Rio de Janeiro,
-        in the neighborhood of Gávea, best known for their professional football
-        team that plays in Campeonato Brasileiro Série A, as well as Campeonato
-        Carioca.
-        <br />
-        The club was first established in 1895 specifically as a rowing club and
-        did not play their first official football match until 1912. Flamengo's
-        traditional uniform features red and black striped shirts with white
-        shorts, and red and black striped socks. Flamengo has typically played
-        their home matches in the Maracanã, the national stadium of Brazil,
-        since its completion in 1950, with some exceptions in recent years.
-        Since 1969, the vulture (Portuguese: <i>urubu</i>) has been the most
-        recognized mascot of Flamengo.
-        <br />
-        Flamengo established themselves as one of Brazil's most successful
-        sports clubs in the 20th century during the era of state leagues in
-        Brazil when they captured several Campeonato Carioca (Rio de Janeiro
-        state league) titles prior to the establishment of the first Brazilian
-        national football championship in 1959. Since then, they have remained
-        successful in Brazilian football, having won 7 Campeonato Brasileiro
-        Série A, the 1987 Copa União, 4 Copa do Brasil, and a record 37
-        Campeonato Carioca. They are one of three clubs to have never been
-        relegated from the Brazilian Serie A. In South American and worldwide
-        competitions, the club's highest achievements are their conquests of the
-        1981, 2019 and 2022 Copa Libertadores, and 1981 Intercontinental Cup
-        against Liverpool, led by the club's most iconic player Zico.Flamengo's
-        fiercest and longest-standing rivalries are with the other "Big Four" of
-        Rio de Janeiro: Fluminense, Botafogo and Vasco da Gama. Their rivalry
-        against Atlético Mineiro is considered the fiercest among all
-        interstates rivalries by any clubs in the country.
-        <br />
-        Flamengo is the most popular club in Brazil, with over 40.2 million
-        supporters as of 2022. It is also Brazil's richest and most valuable
-        football club with an annual revenue of R$1,2 billion (€ 218 million)
-        and a valuation of over R$3.8 billion (€691 million).
-      </p>
+      <div class="info-container">
+        <img
+          src="https://imagens.ebc.com.br/noNSdFbsddnY3R5zD9kF-rYoE_E=/1170x700/smart/https://agenciabrasil.ebc.com.br/sites/default/files/thumbnails/image/flamengo_3_a_0_coritiba_brasileiro_2023.jpg?itok=iH75NfuN"
+          alt="Flamengo players"
+          class="main-image"
+        />
+        <div class="info-paragraphs">
+          <p>
+            <strong>Clube de Regatas do Flamengo</strong>, more commonly
+            referred to as simply Flamengo, is a Brazilian sports club based in
+            Rio de Janeiro, in the neighborhood of Gávea, best known for their
+            professional football team that plays in Campeonato Brasileiro Série
+            A, as well as Campeonato Carioca.
+          </p>
+          <p>
+            The club was first established in 1895 specifically as a rowing club
+            and did not play their first official football match until 1912.
+            Flamengo's traditional uniform features red and black striped shirts
+            with white shorts, and red and black striped socks. Flamengo has
+            typically played their home matches in the Maracanã, the national
+            stadium of Brazil, since its completion in 1950, with some
+            exceptions in recent years. Since 1969, the vulture (Portuguese:
+            <i>urubu</i>) has been the most recognized mascot of Flamengo.
+          </p>
+          <p>
+            Flamengo established themselves as one of Brazil's most successful
+            sports clubs in the 20th century during the era of state leagues in
+            Brazil when they captured several Campeonato Carioca (Rio de Janeiro
+            state league) titles prior to the establishment of the first
+            Brazilian national football championship in 1959. Since then, they
+            have remained successful in Brazilian football, having won 7
+            Campeonato Brasileiro Série A, the 1987 Copa União, 4 Copa do
+            Brasil, and a record 37 Campeonato Carioca. They are one of three
+            clubs to have never been relegated from the Brazilian Serie A. In
+            South American and worldwide competitions, the club's highest
+            achievements are their conquests of the 1981, 2019 and 2022 Copa
+            Libertadores, and 1981 Intercontinental Cup against Liverpool, led
+            by the club's most iconic player Zico.Flamengo's fiercest and
+            longest-standing rivalries are with the other "Big Four" of Rio de
+            Janeiro: Fluminense, Botafogo and Vasco da Gama. Their rivalry
+            against Atlético Mineiro is considered the fiercest among all
+            interstates rivalries by any clubs in the country.
+          </p>
+          <p>
+            Flamengo is the most popular club in Brazil, with over 40.2 million
+            supporters as of 2022. It is also Brazil's richest and most valuable
+            football club with an annual revenue of R$1,2 billion (€ 218
+            million) and a valuation of over R$3.8 billion (€691 million).
+          </p>
+        </div>
+      </div>
     </main>
     <footer>
       <p>&#169; 2023 Clube de Regatas do Flamengo. All Rights Reserved.</p>
