--- a/players.html
+++ b/players.html
@@ -4,14 +4,21 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Players - Clube de Regatas do Flamengo</title>
+    <link rel="stylesheet" href="css/players.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <header>
-      <div class="logo-and-title">
+      <div class="logo-and-title-container">
         <img
           src="https://upload.wikimedia.org/wikipedia/commons/9/93/Flamengo-RJ_%28BRA%29.png"
           alt="Flamengo logo"
-          width="45px"
+          width="40px"
         />
         <h1>Clube de Regatas do Flamengo</h1>
       </div>
@@ -19,6 +26,12 @@
         <nav>
           <ul>
             <li><a href="index.html" target="_blank">Home</a></li>
+            <li>
+              <a href="scheduled-games.html" target="_blank">Scheduled Games</a>
+            </li>
+            <li>
+              <a href="hall-of-fame.html" target="_blank">Hall of Fame</a>
+            </li>
           </ul>
         </nav>
       </div>
@@ -33,8 +46,10 @@
             src="https://fla-bucket-s3-us.s3.amazonaws.com/public/images/players/1/1681794035.jpg"
             alt="Picture of Hugo Souza"
           />
-          <p>D.O.B.: 1999/01/31 (24 years old)</p>
-          <p>City: Duque de Caxias - RJ</p>
+          <p>
+            <span class="date-of-birth">D.O.B.:</span> 1999/01/31 (24 years old)
+          </p>
+          <p><span class="city">City:</span> Duque de Caxias - RJ</p>
         </li>
         <li>
           <h4>Matheus Cunha - 25</h4>
@@ -42,8 +57,10 @@
             src="https://fla-bucket-s3-us.s3.amazonaws.com/public/images/players/1/1681793679.jpg"
             alt="Picture of Matheus Cunha"
           />
-          <p>D.O.B.: 2001/05/24 (22 years old)</p>
-          <p>City: Tupi Paulista - SP</p>
+          <p>
+            <span class="date-of-birth">D.O.B.:</span> 2001/05/24 (22 years old)
+          </p>
+          <p><span class="city">City:</span> Tupi Paulista - SP</p>
         </li>
         <li>
           <h4>Santos - 1</h4>
@@ -51,8 +68,10 @@
             src="https://fla-bucket-s3-us.s3.amazonaws.com/public/images/players/1/1681793652.jpg"
             alt="Picture of Santos"
           />
-          <p>D.O.B.: 1990/03/17 (33 years old)</p>
-          <p>City: Campina Grande - PB</p>
+          <p>
+            <span class="date-of-birth">D.O.B.:</span> 1990/03/17 (33 years old)
+          </p>
+          <p><span class="city">City:</span> Campina Grande - PB</p>
         </li>
       </ul>
       <h3>Defenders</h3>
@@ -63,8 +82,10 @@
             src="https://fla-bucket-s3-us.s3.amazonaws.com/public/images/players/2/1681793122.jpg"
             alt="Picture of Rodrigo Caio"
           />
-          <p>D.O.B.: 1993/08/17 (29 years old)</p>
-          <p>City: Dracena - SP</p>
+          <p>
+            <span class="date-of-birth">D.O.B.:</span> 1993/08/17 (29 years old)
+          </p>
+          <p><span class="city">City:</span> Dracena - SP</p>
         </li>
         <li>
           <h4>Léo Pereira - 4</h4>
@@ -72,8 +93,10 @@
             src="https://fla-bucket-s3-us.s3.amazonaws.com/public/images/players/2/1681792369.jpg"
             alt="Picture of Léo Pereira"
           />
-          <p>D.O.B.: 1996/01/31 (27 years old)</p>
-          <p>City: Curitiba - PR</p>
+          <p>
+            <span class="date-of-birth">D.O.B.:</span> 1996/01/31 (27 years old)
+          </p>
+          <p><span class="city">City:</span> Curitiba - PR</p>
         </li>
         <li>
           <h4>David Luiz - 23</h4>
@@ -81,8 +104,10 @@
             src="https://fla-bucket-s3-us.s3.amazonaws.com/public/images/players/2/1681792790.jpg"
             alt="Picture of David Luiz"
           />
-          <p>D.O.B.: 1987/04/22 (36 years old)</p>
-          <p>City: Diadema - SP</p>
+          <p>
+            <span class="date-of-birth">D.O.B.:</span> 1987/04/22 (36 years old)
+          </p>
+          <p><span class="city">City:</span> Diadema - SP</p>
         </li>
         <li>
           <h4>Fabrício Bruno - 15</h4>
@@ -90,8 +115,10 @@
             src="https://fla-bucket-s3-us.s3.amazonaws.com/public/images/players/2/1681793171.jpg"
             alt="Picture of Fabrício Bruno"
           />
-          <p>D.O.B.: 1996/02/12 (27 years old)</p>
-          <p>City: Contagem - MG</p>
+          <p>
+            <span class="date-of-birth">D.O.B.:</span> 1996/02/12 (27 years old)
+          </p>
+          <p><span class="city">City:</span> Contagem - MG</p>
         </li>
         <li>
           <h4>Pablo - 30</h4>
@@ -99,8 +126,10 @@
             src="https://fla-bucket-s3-us.s3.amazonaws.com/public/images/players/2/1681793342.jpg"
             alt="Picture of Pablo"
           />
-          <p>D.O.B.: 1991/06/21 (32 years old)</p>
-          <p>City: São Luís - MA</p>
+          <p>
+            <span class="date-of-birth">D.O.B.:</span> 1991/06/21 (32 years old)
+          </p>
+          <p><span class="city">City:</span> São Luís - MA</p>
         </li>
       </ul>
       <h3>Right wingbacks</h3>
@@ -111,8 +140,10 @@
             src="https://fla-bucket-s3-us.s3.amazonaws.com/public/images/players/3/1676389656.png"
             alt="Picture of Matheuzinho"
           />
-          <p>D.O.B.: 2000/09/08 (22 years old)</p>
-          <p>City: Londrina - PR</p>
+          <p>
+            <span class="date-of-birth">D.O.B.:</span> 2000/09/08 (22 years old)
+          </p>
+          <p><span class="city">City:</span> Londrina - PR</p>
         </li>
         <li>
           <h4>Varela - 2</h4>
@@ -120,8 +151,10 @@
             src="https://fla-bucket-s3-us.s3.amazonaws.com/public/images/players/3/1681793440.jpg"
             alt="Picture of Varela"
           />
-          <p>D.O.B.: 1993/03/24 (30 years old)</p>
-          <p>City: Montevideo, Uruguay</p>
+          <p>
+            <span class="date-of-birth">D.O.B.:</span> 1993/03/24 (30 years old)
+          </p>
+          <p><span class="city">City:</span> Montevideo, Uruguay</p>
         </li>
       </ul>
       <h3>Left wingbacks</h3>
@@ -132,8 +165,10 @@
             src="https://fla-bucket-s3-us.s3.amazonaws.com/public/images/players/4/1681792841.jpg"
             alt="Picture of Filipe Luís"
           />
-          <p>D.O.B.: 1985/08/09 (37 years old)</p>
-          <p>City: Jaraguá do Sul - SC</p>
+          <p>
+            <span class="date-of-birth">D.O.B.:</span> 1985/08/09 (37 years old)
+          </p>
+          <p><span class="city">City:</span> Jaraguá do Sul - SC</p>
         </li>
         <li>
           <h4>Ayrton Lucas - 6</h4>
@@ -141,8 +176,10 @@
             src="https://fla-bucket-s3-us.s3.amazonaws.com/public/images/players/4/1681792936.jpg"
             alt="Picture of Ayrton Lucas"
           />
-          <p>D.O.B.: 1997/06/19 (26 years old)</p>
-          <p>City: Carnaúbas dos Dantas - RN</p>
+          <p>
+            <span class="date-of-birth">D.O.B.:</span> 1997/06/19 (26 years old)
+          </p>
+          <p><span class="city">City:</span> Carnaúbas dos Dantas - RN</p>
         </li>
       </ul>
       <h3>Defensive midfielders</h3>
@@ -153,8 +190,10 @@
             src="https://fla-bucket-s3-us.s3.amazonaws.com/public/images/players/5/1681794051.jpg"
             alt="Picture of Arturo Vidal"
           />
-          <p>D.O.B.: 1987/05/22 (36 years old)</p>
-          <p>City: San Joaquin, Chile</p>
+          <p>
+            <span class="date-of-birth">D.O.B.:</span> 1987/05/22 (36 years old)
+          </p>
+          <p><span class="city">City:</span> San Joaquin, Chile</p>
         </li>
         <li>
           <h4>Thiago Maia - 8</h4>
@@ -162,8 +201,10 @@
             src="https://fla-bucket-s3-us.s3.amazonaws.com/public/images/players/5/1681793036.jpg"
             alt="Picture of Thiago Maia"
           />
-          <p>D.O.B.: 1997/03/23 (26 years old)</p>
-          <p>City: Boa Vista - RR</p>
+          <p>
+            <span class="date-of-birth">D.O.B.:</span> 1997/03/23 (26 years old)
+          </p>
+          <p><span class="city">City:</span> Boa Vista - RR</p>
         </li>
         <li>
           <h4>Erick - 5</h4>
@@ -171,8 +212,10 @@
             src="https://fla-bucket-s3-us.s3.amazonaws.com/public/images/players/5/1681793372.jpg"
             alt="Picture of Erick"
           />
-          <p>D.O.B.: 1994/01/15 (29 years old)</p>
-          <p>City: Antofagasta, Chile</p>
+          <p>
+            <span class="date-of-birth">D.O.B.:</span> 1994/01/15 (29 years old)
+          </p>
+          <p><span class="city">City:</span> Antofagasta, Chile</p>
         </li>
         <li>
           <h4>Gerson - 20</h4>
@@ -180,8 +223,10 @@
             src="https://fla-bucket-s3-us.s3.amazonaws.com/public/images/players/5/1681792999.jpg"
             alt="Picture of Gerson"
           />
-          <p>D.O.B.: 1997/05/20 (26 years old)</p>
-          <p>City: Rio de Janeiro - RJ</p>
+          <p>
+            <span class="date-of-birth">D.O.B.:</span> 1997/05/20 (26 years old)
+          </p>
+          <p><span class="city">City:</span> Rio de Janeiro - RJ</p>
         </li>
       </ul>
       <h3>Midfielders</h3>
@@ -192,8 +237,10 @@
             src="https://fla-bucket-s3-us.s3.amazonaws.com/public/images/players/6/1681792746.jpg"
             alt="Picture of Everton Ribeiro"
           />
-          <p>D.O.B.: 1989/04/10 (34 years old)</p>
-          <p>City: Arujá - SP</p>
+          <p>
+            <span class="date-of-birth">D.O.B.:</span> 1989/04/10 (34 years old)
+          </p>
+          <p><span class="city">City:</span> Arujá - SP</p>
         </li>
         <li>
           <h4>Arrascaeta</h4>
@@ -201,8 +248,10 @@
             src="https://fla-bucket-s3-us.s3.amazonaws.com/public/images/players/6/1681793931.jpg"
             alt="Picture of Arrascaeta"
           />
-          <p>D.O.B.: 1994/06/01 (29 years old)</p>
-          <p>City: Nuevo Berlín, Uruguay</p>
+          <p>
+            <span class="date-of-birth">D.O.B.:</span> 1994/06/01 (29 years old)
+          </p>
+          <p><span class="city">City:</span> Nuevo Berlín, Uruguay</p>
         </li>
         <li>
           <h4>Victor Hugo - 29</h4>
@@ -210,8 +259,10 @@
             src="https://fla-bucket-s3-us.s3.amazonaws.com/public/images/players/6/1681793516.jpg"
             alt="Picture of Victor Hugo"
           />
-          <p>D.O.B.: 2004/05/11 (19 years old)</p>
-          <p>City: Rio de Janeiro - RJ</p>
+          <p>
+            <span class="date-of-birth">D.O.B.:</span> 2004/05/11 (19 years old)
+          </p>
+          <p><span class="city">City:</span> Rio de Janeiro - RJ</p>
         </li>
         <li>
           <h4>Matheus França - 42</h4>
@@ -219,8 +270,10 @@
             src="https://fla-bucket-s3-us.s3.amazonaws.com/public/images/players/6/1681793484.jpg"
             alt="Picture of Matheus França"
           />
-          <p>D.O.B.: 2004/04/01 (19 years old)</p>
-          <p>City: Rio de Janeiro - RJ</p>
+          <p>
+            <span class="date-of-birth">D.O.B.:</span> 2004/04/01 (19 years old)
+          </p>
+          <p><span class="city">City:</span> Rio de Janeiro - RJ</p>
         </li>
       </ul>
       <h3>Strikers</h3>
@@ -231,8 +284,10 @@
             src="https://fla-bucket-s3-us.s3.amazonaws.com/public/images/players/7/1681792471.jpg"
             alt="Picture of Gabigol"
           />
-          <p>D.O.B.: 1996/08/30 (26 years old)</p>
-          <p>City: São Bernardo do Campo - SP</p>
+          <p>
+            <span class="date-of-birth">D.O.B.:</span> 1996/08/30 (26 years old)
+          </p>
+          <p><span class="city">City:</span> São Bernardo do Campo - SP</p>
         </li>
         <li>
           <h4>Bruno Henrique - 27</h4>
@@ -240,8 +295,10 @@
             src="https://fla-bucket-s3-us.s3.amazonaws.com/public/images/players/7/1681793086.jpg"
             alt="Picture of Bruno Henrique"
           />
-          <p>D.O.B.: 1990/12/30 (32 years old)</p>
-          <p>City: Belo Horizonte - SP</p>
+          <p>
+            <span class="date-of-birth">D.O.B.:</span> 1990/12/30 (32 years old)
+          </p>
+          <p><span class="city">City:</span> Belo Horizonte - SP</p>
         </li>
         <li>
           <h4>Pedro - 9</h4>
@@ -249,8 +306,10 @@
             src="https://fla-bucket-s3-us.s3.amazonaws.com/public/images/players/7/1681792684.jpg"
             alt="Picture of Pedro"
           />
-          <p>D.O.B.: 1997/06/20 (26 years old)</p>
-          <p>City: Rio de Janeiro - RJ</p>
+          <p>
+            <span class="date-of-birth">D.O.B.:</span> 1997/06/20 (26 years old)
+          </p>
+          <p><span class="city">City:</span> Rio de Janeiro - RJ</p>
         </li>
         <li>
           <h4>Marinho - 31</h4>
@@ -258,8 +317,10 @@
             src="https://fla-bucket-s3-us.s3.amazonaws.com/public/images/players/7/1681793410.jpg"
             alt="Picture of Marinho"
           />
-          <p>D.O.B.: 1990/05/29 (33 years old)</p>
-          <p>City: Penedo - RJ</p>
+          <p>
+            <span class="date-of-birth">D.O.B.:</span> 1990/05/29 (33 years old)
+          </p>
+          <p><span class="city">City:</span> Penedo - RJ</p>
         </li>
         <li>
           <h4>Everton - 11</h4>
@@ -267,8 +328,10 @@
             src="https://fla-bucket-s3-us.s3.amazonaws.com/public/images/players/7/1681792900.jpg"
             alt="Picture of Everton"
           />
-          <p>D.O.B.: 1996/03/22 (27 years old)</p>
-          <p>City: Maracanaú - CE</p>
+          <p>
+            <span class="date-of-birth">D.O.B.:</span> 1996/03/22 (27 years old)
+          </p>
+          <p><span class="city">City:</span> Maracanaú - CE</p>
         </li>
       </ul>
     </main>
