fix: remove target="_blank" attribute from links

--- a/players.html
+++ b/players.html
@@ -25,12 +25,12 @@
       <div>
         <nav>
           <ul>
-            <li><a href="index.html" target="_blank">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li>
-              <a href="scheduled-games.html" target="_blank">Scheduled Games</a>
+              <a href="scheduled-games.html">Scheduled Games</a>
             </li>
             <li>
-              <a href="hall-of-fame.html" target="_blank">Hall of Fame</a>
+              <a href="hall-of-fame.html">Hall of Fame</a>
             </li>
           </ul>
         </nav>
