--- a/scheduled-games.html
+++ b/scheduled-games.html
@@ -4,21 +4,34 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Scheduled Games - Clube de Regatas do Flamengo</title>
+    <link rel="stylesheet" href="css/scheduled-games.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <header>
-      <div class="logo-and-title">
+      <div class="logo-and-title-container">
         <img
           src="https://upload.wikimedia.org/wikipedia/commons/9/93/Flamengo-RJ_%28BRA%29.png"
           alt="Flamengo logo"
-          width="45px"
+          width="40px"
         />
         <h1>Clube de Regatas do Flamengo</h1>
       </div>
       <div>
         <nav>
           <ul>
-            <li><a href="index.html" target="_blank">Home</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li>
+              <a href="players.html">Players</a>
+            </li>
+            <li>
+              <a href="hall-of-fame.html">Hall of Fame</a>
+            </li>
           </ul>
         </nav>
       </div>
