--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
       <div>
         <nav>
           <ul>
-            <li><a href="players.html" target="_blank">Players</a></li>
+            <li><a href="players.html">Players</a></li>
             <li>
-              <a href="scheduled-games.html" target="_blank">Scheduled Games</a>
+              <a href="scheduled-games.html">Scheduled Games</a>
             </li>
             <li>
-              <a href="hall-of-fame.html" target="_blank">Hall of Fame</a>
+              <a href="hall-of-fame.html">Hall of Fame</a>
             </li>
           </ul>
         </nav>
