chore: scheduled-games page css complete

--- a/scheduled-games.html
+++ b/scheduled-games.html
@@ -38,7 +38,7 @@
     </header>
     <main>
       <h2>Flamengo's 10 next games</h2>
-      <table>
+      <table cellspacing="0">
         <thead>
           <tr>
             <th>Date</th>
