--- a/hall-of-fame.html
+++ b/hall-of-fame.html
@@ -4,21 +4,34 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hall of Fame - Clube de Regatas do Flamengo</title>
+    <link rel="stylesheet" href="css/hall-of-fame.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <header>
-      <div class="logo-and-title">
+      <div class="logo-and-title-container">
         <img
           src="https://upload.wikimedia.org/wikipedia/commons/9/93/Flamengo-RJ_%28BRA%29.png"
           alt="Flamengo logo"
-          width="45px"
+          width="40px"
         />
         <h1>Clube de Regatas do Flamengo</h1>
       </div>
       <div>
         <nav>
           <ul>
-            <li><a href="index.html" target="_blank">Home</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li>
+              <a href="scheduled-games.html">Scheduled Games</a>
+            </li>
+            <li>
+              <a href="players.html">Players</a>
+            </li>
           </ul>
         </nav>
       </div>
@@ -35,7 +48,7 @@
           />
           <p>
             He arrived at Flamengo with the arduous mission of replacing the
-            idol Lenidas da Silva. Despite the skepticism, he quickly showed his
+            idol Leônidas da Silva. Despite the skepticism, he quickly showed his
             worth and became one of the attacking references of the Rio de
             Janeiro club. To this day, he is the highest scorer in one edition
             of the state championship, having scored 39 goals in 1941.
