--- a/hall-of-fame.html
+++ b/hall-of-fame.html
@@ -4,13 +4,133 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hall of Fame - Clube de Regatas do Flamengo</title>
-    <link rel="stylesheet" href="css/hall-of-fame.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
       rel="stylesheet"
     />
+    <style>
+      /* RESET */
+
+      * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+        list-style: none;
+        font-family: "Roboto", sans-serif;
+      }
+
+      /* HEADER */
+
+      body {
+        max-width: 1350px;
+        width: 100%;
+        background-color: #e7e7e7;
+      }
+
+      header {
+        justify-content: space-between;
+        padding: 30px 70px;
+        background-color: #d2232a;
+        color: #fff;
+      }
+
+      header,
+      header .logo-and-title-container,
+      header ul,
+      main ul,
+      main li {
+        display: flex;
+        align-items: center;
+      }
+
+      header .logo-and-title-container {
+        position: relative;
+      }
+
+      header img {
+        width: 120px;
+        top: -15px;
+        position: absolute;
+      }
+
+      header h1 {
+        margin: 10px 0 0 140px;
+        font-size: 36px;
+      }
+
+      ul {
+        gap: 20px;
+      }
+
+      li a {
+        text-decoration: none;
+        background-color: #000;
+        color: #fff;
+        font-weight: bold;
+        font-size: 18px;
+        padding: 10px;
+        border-radius: 3px;
+        transition: 0.3s ease-in-out;
+      }
+
+      li a:hover {
+        background-color: #1f1f1f;
+      }
+
+      /* MAIN CONTENT */
+
+      main,
+      footer {
+        text-align: center;
+      }
+
+      main h2 {
+        background-color: #000;
+        color: #fff;
+        font-size: 28px;
+        margin: 16px 0 32px 0;
+        padding: 12px;
+      }
+
+      main ul {
+        flex-wrap: wrap;
+        align-items: center;
+        justify-content: center;
+      }
+
+      main ul li h3,
+      main ul li p {
+        width: 450px;
+      }
+
+      main ul li img {
+        width: 200px;
+        height: 200px;
+        object-fit: cover;
+        object-position: top;
+        border-radius: 50%;
+      }
+
+      main li {
+        flex-direction: column;
+        gap: 16px;
+        margin: 16px;
+        padding: 32px;
+        border: 2px solid #0000001c;
+        box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+      }
+
+      /* FOOTER */
+
+      footer {
+        background-color: #d2232a;
+        padding: 10px 0;
+        color: #fff;
+        margin-top: 32px;
+      }
+    </style>
   </head>
   <body>
     <header>
@@ -48,8 +168,8 @@
           />
           <p>
             He arrived at Flamengo with the arduous mission of replacing the
-            idol Leônidas da Silva. Despite the skepticism, he quickly showed his
-            worth and became one of the attacking references of the Rio de
+            idol Leônidas da Silva. Despite the skepticism, he quickly showed
+            his worth and became one of the attacking references of the Rio de
             Janeiro club. To this day, he is the highest scorer in one edition
             of the state championship, having scored 39 goals in 1941.
           </p>
