fix: moved the img css style to the html file (inline css)

--- a/index.html
+++ b/index.html
@@ -43,7 +43,10 @@
           src="https://imagens.ebc.com.br/noNSdFbsddnY3R5zD9kF-rYoE_E=/1170x700/smart/https://agenciabrasil.ebc.com.br/sites/default/files/thumbnails/image/flamengo_3_a_0_coritiba_brasileiro_2023.jpg?itok=iH75NfuN"
           alt="Flamengo players"
           class="main-image"
+          width="450px"
+          style="float: left; border: 3px solid #000; margin: 0 40px 30px 0"
         />
+
         <div class="info-paragraphs">
           <p>
             <strong>Clube de Regatas do Flamengo</strong>, more commonly
