--- a/hall-of-fame.html
+++ b/hall-of-fame.html
@@ -29,6 +29,7 @@
       /* HEADER */
 
       body {
+        margin: 0 auto;
         max-width: 1350px;
         width: 100%;
         background-color: #e7e7e7;
