alterações na cor do roda pe

--- a/hall-of-fame.html
+++ b/hall-of-fame.html
@@ -131,7 +131,7 @@
       /* FOOTER */
 
       footer {
-        background-color: #d2232a;
+        background-color: #000000;
         padding: 10px 0;
         color: #fff;
         margin-top: 32px;
